Reduces the width of the first rectangle, to prevent overflow

--- a/Exercise_5/checkout.css
+++ b/Exercise_5/checkout.css
@@ -21,7 +21,7 @@ header {
 
 .rectangle {
     position: absolute;
-    width: 1358px;
+    width: 1200px;
     height: 2px;
     top: 99px;
     background: #E0E6EA;
